--- a/style/layout.css
+++ b/style/layout.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   height: 100vh;
   justify-content: center;
-  /* max-width: 1280px; */
+  max-width: 1280px;
   width: 100%;
   margin-inline: auto;
   gap: 1.25rem;
@@ -54,7 +54,7 @@ main {
   background-color: var(--shape-body);
   margin: 1.25rem 1.25rem 1.25rem 0;
   border-radius: .75rem;
-  max-width: 51.25rem;
+  /* max-width: 51.25rem; */
 
   & label {
     color: var(--text-body);
@@ -71,8 +71,9 @@ main {
 
   & .main-container {
     max-width: 51.25rem;
-    padding: 5rem 8.125rem;
+    margin: 5rem 8.125rem 5rem 8.125rem;
     margin-inline: auto;
+
   }
 
   & .about-event {
